maybe found the bug